--- a/index.html
+++ b/index.html
@@ -5,185 +5,317 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>نادي الهندسة الميكانيكية</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-*{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
+:root{
+  --primary:#f7931e;
+  --secondary:#00e5ff;
 }
+
+*{margin:0;padding:0;box-sizing:border-box;}
 
 body{
-    font-family:'Cairo',sans-serif;
-    background:linear-gradient(135deg,#000000,#ff7b00);
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    direction:rtl;
-    overflow:hidden;
+  font-family:'Tajawal',sans-serif;
+  direction:rtl;
+  background:#0b0f19;
+  color:white;
+  overflow:hidden;
 }
 
-/* Background Gears */
-.gear-bg{
-    position:absolute;
-    color:rgba(255,140,0,0.07);
-    z-index:0;
+/* ================= INTRO ================= */
+
+.intro{
+  position:fixed;
+  inset:0;
+  background:black;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  z-index:9999;
+  overflow:hidden;
 }
 
-.gear1{
-    font-size:260px;
-    top:-70px;
-    left:-70px;
-    animation:rotate 30s linear infinite;
+.flash{
+  position:absolute;
+  width:200px;
+  height:200px;
+  background:radial-gradient(circle,#00e5ff,transparent 70%);
+  animation:flash 1.2s ease forwards;
 }
 
-.gear2{
-    font-size:200px;
-    bottom:-60px;
-    right:-60px;
-    animation:rotateReverse 20s linear infinite;
+@keyframes flash{
+  0%{transform:scale(0);opacity:1;}
+  100%{transform:scale(8);opacity:0;}
+}
+
+.gear{
+  position:absolute;
+  border:2px solid rgba(255,255,255,0.07);
+  border-radius:50%;
+  animation:rotate 35s linear infinite;
+}
+
+.gear.big{width:600px;height:600px;}
+.gear.small{
+  width:350px;height:350px;
+  animation-direction:reverse;
 }
 
 @keyframes rotate{
-    from{ transform:rotate(0deg); }
-    to{ transform:rotate(360deg); }
+  from{transform:rotate(0);}
+  to{transform:rotate(360deg);}
 }
 
-@keyframes rotateReverse{
-    from{ transform:rotate(360deg); }
-    to{ transform:rotate(0deg); }
+.spark{
+  position:absolute;
+  width:4px;
+  height:4px;
+  background:#00e5ff;
+  border-radius:50%;
+  box-shadow:0 0 20px #00e5ff;
+  animation:sparkMove 1s linear infinite;
 }
 
-/* Card */
-.container{
-    position:relative;
-    z-index:2;
-    text-align:center;
-    width:90%;
-    max-width:420px;
-    background:rgba(0,0,0,0.75);
-    backdrop-filter:blur(20px);
-    padding:40px 25px;
-    border-radius:25px;
-    box-shadow:0 25px 60px rgba(255,120,0,0.4);
+@keyframes sparkMove{
+  0%{transform:translate(0,0);opacity:1;}
+  100%{transform:translate(250px,-200px);opacity:0;}
 }
 
-.logo{
-    width:150px;
-    height:150px;
-    border-radius:50%;
-    object-fit:cover;
-    margin-bottom:20px;
-    box-shadow:0 0 35px rgba(255,140,0,0.6);
+.intro-title{
+  font-size:3rem;
+  font-weight:900;
+  opacity:0;
+  transform:scale(.8);
+  animation:titleReveal 2s ease forwards 1.5s;
+  background:linear-gradient(180deg,#fff,#bbb,#666);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  text-align:center;
 }
 
-h1{
-    font-size:22px;
-    margin-bottom:30px;
-    color:#ffffff;
+@keyframes titleReveal{
+  0%{opacity:0;transform:scale(.8);}
+  50%{transform:scale(1.05);}
+  100%{opacity:1;transform:scale(1);}
 }
 
-/* Buttons */
-.link-btn{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    background:#ffffff;
-    padding:14px 20px;
-    margin:12px 0;
-    border-radius:50px;
-    text-decoration:none;
-    color:#333;
-    font-size:16px;
-    font-weight:600;
-    transition:0.3s ease;
+.intro.hide{
+  opacity:0;
+  transition:1s ease;
+  pointer-events:none;
 }
 
-.link-btn i{
-    font-size:20px;
+/* ================= HERO ================= */
+
+.hero{
+  height:100vh;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  text-align:center;
 }
 
-.link-btn{
-    flex-direction:row-reverse;
+.hero h1{
+  font-size:3rem;
+  margin-bottom:15px;
+  background:linear-gradient(135deg,var(--primary),var(--secondary));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
-.link-btn:hover{
-    transform:translateY(-4px) scale(1.03);
-    box-shadow:0 12px 30px rgba(255,140,0,0.5);
+.club-slogan{
+  font-size:1.2rem;
+  font-weight:700;
+  margin-bottom:25px;
+  background:linear-gradient(90deg,var(--secondary),var(--primary));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
-/* App Colors */
-.tiktok i{ color:#000; }
-.instagram i{ color:#E1306C; }
-.facebook i{ color:#1877F2; }
-.telegram i{ color:#0088cc; }
-
-/* Footer */
-.footer{
-    margin-top:25px;
-    color:#ffae42;
-    font-size:15px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    gap:10px;
+.top-icons{
+  display:flex;
+  gap:30px;
+  margin-bottom:30px;
 }
 
-/* Fire Gear Animation */
-.fire-gear{
-    color:#ffae00;
-    font-size:20px;
-    animation:fireSpin 3s linear infinite, fireGlow 1.5s ease-in-out infinite alternate;
+.icon-item{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  cursor:pointer;
 }
 
-@keyframes fireSpin{
-    from{ transform:rotate(0deg); }
-    to{ transform:rotate(360deg); }
+.circle{
+  width:70px;
+  height:70px;
+  border-radius:50%;
+  background:rgba(255,255,255,.05);
+  border:1px solid rgba(255,255,255,.1);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:1.5rem;
+  margin-bottom:8px;
+  transition:.4s;
 }
 
-@keyframes fireGlow{
-    from{ 
-        text-shadow:0 0 5px #ff6600,
-                    0 0 10px #ff3300,
-                    0 0 20px #ff0000;
-    }
-    to{ 
-        text-shadow:0 0 15px #ff9900,
-                    0 0 25px #ff5500,
-                    0 0 40px #ff0000;
-    }
+.icon-item:hover .circle{
+  transform:translateY(-8px) scale(1.1);
+  box-shadow:0 0 25px var(--secondary);
+}
+
+.social-links{
+  display:flex;
+  gap:20px;
+  margin-top:25px;
+}
+
+.social-links a{
+  width:45px;
+  height:45px;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:rgba(255,255,255,.05);
+  border:1px solid rgba(255,255,255,.1);
+  color:white;
+  text-decoration:none;
+  transition:.3s;
+}
+
+.social-links a:hover{
+  transform:translateY(-6px);
+  box-shadow:0 0 20px var(--primary);
+}
+
+/* ================= POPUP ================= */
+
+.popup{
+  position:fixed;
+  inset:0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:rgba(0,0,0,.6);
+  backdrop-filter:blur(6px);
+  opacity:0;
+  pointer-events:none;
+  transition:.4s;
+}
+
+.popup.active{
+  opacity:1;
+  pointer-events:auto;
+}
+
+.popup-content{
+  width:90%;
+  max-width:500px;
+  background:#111827;
+  border-radius:20px;
+  padding:40px;
+  position:relative;
+  box-shadow:0 0 40px rgba(0,229,255,.3);
+}
+
+.close-btn{
+  position:absolute;
+  top:10px;
+  left:15px;
+  cursor:pointer;
 }
 </style>
 </head>
-
 <body>
 
-<i class="fas fa-cog gear-bg gear1"></i>
-<i class="fas fa-cog gear-bg gear2"></i>
+<!-- INTRO -->
+<div class="intro" id="intro">
+  <div class="flash"></div>
+  <div class="gear big"></div>
+  <div class="gear small"></div>
+  <div class="spark"></div>
+  <div class="intro-title">نادي الهندسة الميكانيكية</div>
+</div>
 
-<div class="container">
+<!-- HERO -->
+<div class="hero">
 
-    <img src="logo.png" class="logo" alt="Mechanical Engineering Club Logo">
+  <h1>نادي الهندسة الميكانيكية</h1>
+  <div class="club-slogan">معًا نبني مستقبل الهندسة</div>
 
-    <h1>نادي الهندسة الميكانيكية</h1>
+  <div class="top-icons">
+    <div class="icon-item" onclick="openCard('about')">
+      <div class="circle"><i class="fas fa-users-cog"></i></div>
+      <span>من نحن</span>
+    </div>
 
-    <!-- TikTok -->
-    <a href="https://www.tiktok.com/@lm_e_cl" target="_blank" rel="noopener noreferrer" class="link-btn tiktok">
-        <span>TikTok</span>
-        <i class="fab fa-tiktok"></i>
-    </a>
+    <div class="icon-item" onclick="openCard('vision')">
+      <div class="circle"><i class="fas fa-eye"></i></div>
+      <span>رؤيتنا</span>
+    </div>
 
-    <!-- Instagram -->
-    <a href="https://www.instagram.com/lm_e_cl/" target="_blank" rel="noopener noreferrer" class="link-btn instagram">
-        <span>Instagram</span>
-        <i class="fab fa-instagram"></i>
-    </a>
+    <div class="icon-item" onclick="openCard('goals')">
+      <div class="circle"><i class="fas fa-bullseye"></i></div>
+      <span>أهدافنا</span>
+    </div>
+  </div>
 
-    <!-- Facebook -->
-    <a href="https://www.facebook.com/share/1DnxmH3VUb/" target="_blank" rel="noopener noreferrer" class="link-btn facebook">
-        <span>Facebook</span>
-        <i class="fab fa-facebook-f"></i>
-    </a>
+  <div class="social-links">
+    <a href="https://www.facebook.com/share/184soRE7YD/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://t.me/lM_E_Cl" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+    <a href="https://www.instagram.com/lm_e_cl/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.tiktok.com/@lm_e_cl" target="_blank"><i class="fab fa-tiktok"></i></a>
+  </div>
+
+</div>
+
+<!-- POPUP -->
+<div class="popup" id="popup" onclick="closeCard()">
+  <div class="popup-content" onclick="event.stopPropagation()">
+    <span class="close-btn" onclick="closeCard()">✖</span>
+    <h2 id="popup-title"></h2>
+    <div id="popup-text"></div>
+  </div>
+</div>
+
+<script>
+setTimeout(()=>{
+  document.getElementById("intro").classList.add("hide");
+  document.body.style.overflow="auto";
+},4500);
+
+function openCard(type){
+  const popup=document.getElementById("popup");
+  const title=document.getElementById("popup-title");
+  const text=document.getElementById("popup-text");
+
+  if(type==="about"){
+    title.innerText="من نحن";
+    text.innerHTML="<p>نحن نادٍ طلابي يطوّر مهارات طلاب الهندسة الميكانيكية ويعزز الجانب التطبيقي والتحليل الهندسي.</p>";
+  }
+
+  if(type==="vision"){
+    title.innerText="رؤيتنا";
+    text.innerHTML="<p>نسعى لإعداد مهندسين متميزين قادرين على الابتكار والمنافسة والمساهمة في تطوير الأنظمة الصناعية.</p>";
+  }
+
+  if(type==="goals"){
+    title.innerText="أهدافنا";
+    text.innerHTML="<p>⚙ تنمية المهارات العملية<br>⚙ تعزيز التفكير التحليلي<br>⚙ دعم العمل الجماعي<br>⚙ ربط المعرفة بالتطبيق</p>";
+  }
+
+  popup.classList.add("active");
+}
+
+function closeCard(){
+  document.getElementById("popup").classList.remove("active");
+}
+</script>
+
+</body>
+</html>
